test/visibility/import/edgeCases/dontLeakSymbols2-proc.good
dontLeakSymbols2-proc.chpl:19: In function 'main':
dontLeakSymbols2-proc.chpl:20: error: Symbol 'foo' undeclared in module 'C'
